<resources>
    <string name="app_name">Aptoide Backup Apps</string>
    <string name="login_email_prompt">Email</string>
    <string name="login_password_prompt">Password</string>
    <string name="login_to_dropbox">Log in</string>
    <string name="login_to_dropbox_sign_in">Sign in to Dropbox</string>
    <string name="login_to_dropbox_button">Sign in</string>
    <string name="login_to_dropbox_switch">Already have an account? Sign in</string>
    <string name="email_domain_suggestion">Did you mean &lt;i>&lt;u>%1$s@&lt;b>%2$s&lt;/b>&lt;/u>?&lt;/i></string>
    <string name="trouble_logging_in">Having trouble signing in?</string>
    <string name="new_to_aptoide">New to Aptoide?</string>
    <string name="public_key">Public</string>
    <string name="private_key">Private</string>
    <string name="finished_install">%s has been installed.</string>
    <string name="installing">%s is installing...</string>
    <string name="timeout">network connection timeout</string>
    <string name="ip_blacklisted">Blacklisted IP</string>
    <string name="connection_error">no network connection</string>
    <string name="apk_not_found">Apk not found</string>
    <string name="first_run">First run</string>
    <string name="first_run_intro">Aptoide Apps Backup uses a free "www.aptoide.com" store to save your apps.\nThis
        store can be public or private.\n\nDo you want to setup your store now?\n
    </string>
    <string name="before_restoring">Before restoring</string>
    <string name="before_restoring_alert">Before restoring an Application, you need to configure your "www.aptoide.com"
        store from where the application will be retrieved.\n\nDo you want to setup your store now?\n
    </string>
    <string name="later">Later</string>
    <string name="setup_now">Setup Now</string>
    <string name="self_update">Self update</string>
    <string name="update_available">Update available</string>
    <string name="update_confirm">There is a new version of aptoide apps backup available,\ndo you wish to update?
    </string>
    <string name="self_updating">Please wait while processing update download&#8230;</string>
    <string name="default_store">Use my default store</string>
    <string name="bazaar_login">Aptoide login</string>
    <string name="logging_in">Logging in</string>
    <string name="please_wait">Please wait</string>
    <string name="clear_login">Clear login</string>
    <string name="clear_login_sum">Unset your current login</string>
    <string name="set_new_login">New login</string>
    <string name="set_new_login_sum">Logout from your account</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="no_username">No Username</string>
    <string name="no_password">No Password</string>
    <string name="login_required">Login required</string>
    <string name="about">About</string>
    <string name="description">Your Android application backup manager.\n</string>
    <string name="version">Version</string>
    <string name="restoring_app">Restoring application: %s</string>
    <string name="downloading_app">Downloading application: %s</string>
    <string name="settings">Settings</string>
    <string name="backup_uploads_permissions">Backup upload Permissions</string>
    <string name="allowed_connections">Allowed connections</string>
    <string name="auto_backup">Automatic Backup</string>
    <string name="auto_backup_sum">On new apps install</string>
    <string name="never">Never</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_description">Warning: removing cached apks will affect ongoing restores. Don\'t do this if
        you have ongoing restores!
    </string>
    <string name="display_options">Display Options</string>
    <string name="sort_applications_by">Sort applications by:</string>
    <string name="freshness">Most Recent</string>
    <string name="alphabetic">Alphabetically</string>
    <string name="size">Size</string>
    <string name="stars">Rating</string>
    <string name="downloads">Downloads</string>
    <string name="show_system_apps">Show system applications</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="available">Available</string>
    <string name="installed">Installed</string>
    <string name="system">System</string>
    <string name="protectd">Protected</string>
    <string name="too_big">Too big</string>
    <string name="backed_up">Backed up</string>
    <string name="no_apps">No apps to display. Start backing up!</string>
    <string name="loading_apps">Loading apps&#8230;</string>
    <string name="uninstall">Uninstall</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account">New Account</string>
    <string name="registration">Aptoide Registration</string>
    <string name="store_privacy">Store Privacy</string>
    <string name="publc">Public</string>
    <string name="privt">Private</string>
    <string name="accept_terms">By signing up you are agreeing to the Aptoide Terms of Service and Aptoide Content
        Policy for Developers
    </string>
    <string name="social_networks">Social networks</string>
    <string name="social_network_intro">Your feedback is important. You can find us on Facebook and/or follow us on
        Twitter.
    </string>
    <string name="find_us_on_facebook">Find us on Facebook</string>
    <string name="follow_twitter">Follow us on Twitter</string>
    <string name="loading_facebook">Loading Facebook&#8230;</string>
    <string name="loading_twitter">Loading Twitter&#8230;</string>
    <string name="no_network_connection">No network connection.</string>
    <string name="no_permitted_network_connection">No permitted network connection</string>
    <string name="no_space_left_in_sdcard">No space left in SDcard</string>
    <string name="download_failed">Download failed</string>
    <string name="repository">Store</string>
    <string name="repository_example">(Example: your username)</string>
    <string name="un_select_all">Un/Select all</string>
    <string name="delete">Delete</string>
    <string name="backup_selected_apps">Backup selected apps</string>
    <string name="restore_selected_apps">Restore selected apps</string>
    <string name="form_intro">You may fill out the form:</string>
    <string name="app_category">App category</string>
    <string name="comics">Comics</string>
    <string name="communication">Communication</string>
    <string name="entertainment">Entertainment</string>
    <string name="finance">Finance</string>
    <string name="health">Health</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="multimedia">Multimedia</string>
    <string name="news_weather">News &amp; Weather</string>
    <string name="productivity">Productivity</string>
    <string name="reference">Reference</string>
    <string name="shopping">Shopping</string>
    <string name="social">Social</string>
    <string name="sports">Sports</string>
    <string name="themes">Themes</string>
    <string name="tools">Tools</string>
    <string name="travel">Travel</string>
    <string name="demo">Demo</string>
    <string name="software_libraries">Software Libraries</string>
    <string name="arcade_action_games">Arcade &amp; Action (Games)</string>
    <string name="brain_puzzle_games">Brain &amp; Puzzle (Games)</string>
    <string name="cards_casino_games">Cards &amp; Casino (Games)</string>
    <string name="casual_games">Casual (Games)</string>
    <string name="app_rating">App rating</string>
    <string name="all">All</string>
    <string name="pre_teen">Pre-Teen (minimal age: 10)</string>
    <string name="teen">Teen (minimal age: 16)</string>
    <string name="mature">Mature (minimal age: 18)</string>
    <string name="app_description_optional">App description (Optional)</string>
    <string name="app_description">App description</string>
    <string name="phone_number_optional">Phone number (Optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail_optional">E-mail (Optional)</string>
    <string name="e_mail">E-mail</string>
    <string name="website_url_optional">Website url (Optional)</string>
    <string name="website_url">Website url</string>
    <string name="uploading_apps">Uploading apps:</string>
    <string name="uploaded_apps">Uploaded apps:</string>
    <string name="not_uploaded_apps">Failed to upload:</string>
    <string name="return_to_apps_list">Return to apps list</string>
    <string name="login_service_unavailable">Login service currently unavailable, please retry!</string>
    <string name="login_create_service_unavailable">User creation service currently unavailable</string>
    <string name="repo_service_unavailable">Store service currently unavailable</string>
    <string name="repo_not_associated_with_user">This store is not associated with this user, please correct it!
    </string>
    <string name="check_login">Please check your username and password!</string>
    <string name="check_repo">Please check your store!</string>
    <string name="repo_is_private">Store is private!</string>
    <string name="username_not_email">Username not properly formatted e-mail</string>
    <string name="wrong_password">Wrong password</string>
    <string name="hmac_problem">HMAC problem</string>
    <string name="user_agent_problem">User agent problem</string>
    <string name="username_already_registered">Username already registered</string>
    <string name="missing_parameter">Missing parameter</string>
    <string name="unknown_username">Unknown username</string>
    <string name="repo_requires_authentication">Store requires authentication</string>
    <string name="repo_already_exists">Store already exists</string>
    <string name="missing_token">Missing token</string>
    <string name="missing_apk">Missing apk</string>
    <string name="select_rating">Please select a rating</string>
    <string name="enter_apk_name">Please enter an application name!</string>
    <string name="select_category">Please select a category!</string>
    <string name="enter_description">Please enter a description!</string>
    <string name="token_error">Token error</string>
    <string name="invalid_repo_name">Invalid store name</string>
    <string name="invalid_apk">Invalid apk</string>
    <string name="invalid_rating">Invalid rating</string>
    <string name="invalid_category">Invalid category</string>
    <string name="invalid_website">Invalid website url</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="failed_apk_upload">Apk upload failed</string>
    <string name="apk_too_big">Apk too big</string>
    <string name="apk_duplicate">Apk duplicate</string>
    <string name="apk_infected">Apk infected with virus</string>
    <string name="apk_blacklisted">Apk blacklisted</string>
    <string name="failed_server_connection">Server connection failed, please retry!</string>
    <string name="server_error_apk">Server Error (Lost Apk)</string>
    <string name="server_error_screenshots">Server Error (Screenchots)</string>
    <string name="server_error_md5">Server Error (MD5)</string>
    <string name="server_error_icon_upload">Server Error (Icon)</string>
    <string name="server_error_graphic_upload">Server Error (Graphic)</string>
    <string name="server_error">Server Error</string>
    <string name="updating_repo_please_wait">Updating store, please wait!</string>
    <string name="manager">Manager</string>
    <string name="sort">Sort</string>
    <string name="by_name">Alphabetically</string>
    <string name="by_size">By size</string>
    <string name="by_date">Most recent first</string>
    <string name="by_state">By state</string>
</resources>